fixed alignment problems in product description

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Store.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Store.less
@@ -687,11 +687,6 @@ main {
     -webkit-column-gap: 40px;
     -moz-column-gap: 40px;
     column-gap: 40px;
-
-    span {
-        display: block;
-        text-align: justify;
-    }
 }
 
 .pNameWpr {
